[gd_scene load_steps=4 format=3 uid="uid://c4bml644dyg7f"]

[ext_resource type="Script" path="res://Scripts/Others/MainMenuScript.gd" id="1_n0rn1"]
[ext_resource type="PackedScene" uid="uid://bdhpuj7itpv6j" path="res://Scenes/OptionsMenuScene.tscn" id="2_itxe2"]

[sub_resource type="LabelSettings" id="LabelSettings_td5hu"]
line_spacing = 5.0
font_size = 80
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="CanvasLayer" node_paths=PackedStringArray("optionsMenu")]
script = ExtResource("1_n0rn1")
optionsMenu = NodePath("OptionsMenu")

[node name="PanelContainer2" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
custom_minimum_size = Vector2(700, 600)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="GameLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PACE"
label_settings = SubResource("LabelSettings_td5hu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="PlayButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "PLAY
"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="OptionsButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "OPTIONS"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="QuitButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "QUIT
"

[node name="OptionsMenu" parent="." node_paths=PackedStringArray("mainMenu") instance=ExtResource("2_itxe2")]
mainMenu = NodePath("..")

[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
